--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.7",
+    "pg": "^7.15.1"
   }
 }
