--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
+    "node-kmeans": "^1.1.9",
     "nodemon": "^1.18.7",
     "pg": "^7.15.1"
   }
