--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "go": "nodemon server.js",
-    "db:reset": "node bin/resetdb.js"
+    "db:reset": "node db/reset.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
