--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.9.1",
     "node-kmeans": "^1.1.9",
     "nodemon": "^1.18.7",
-    "pg": "^7.15.1"
+    "pg": "^7.15.1",
+    "pg-native": "3.0.0"
   }
 }
