--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,6 +10,7 @@
     "db:reset": "node db/reset.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
