--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/node": "^13.1.1",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
