--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -9,7 +9,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
