--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/node": "^13.1.1",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.1",
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
