--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@types/node": "^13.1.1",
+    "@types/react-datepicker": "^2.10.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.1",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
