add proxy for api call

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "maps.googleapis.com",
+  "proxy": "http://maps.googleapis.com",
   "name": "react-front-end",
   "version": "0.1.0",
   "private": true,
