move google api to backend

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://maps.googleapis.com",
+  "proxy": "http://localhost:8081",
   "name": "react-front-end",
   "version": "0.1.0",
   "private": true,
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "dotenv": "^8.2.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
