--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -14,12 +14,14 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "node-kmeans": "^1.1.9",
     "nodemon": "^1.18.7",
     "pg": "^7.15.1",
-    "pg-native": "3.0.0"
+    "pg-native": "3.0.0",
+    "proxy-addr": "^2.0.5"
   }
 }
