--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -7,6 +7,7 @@
     "@types/react-datepicker": "^2.10.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.1",
+    "avataaars": "^1.2.1",
     "axios": "^0.18.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
