--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/google-map-react": "^1.1.3",
     "@types/node": "^13.1.1",
     "@types/react-datepicker": "^2.10.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.1",
     "avataaars": "^1.2.1",
     "axios": "^0.18.1",
+    "google-map-react": "^1.1.5",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
