--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,6 +6,7 @@
     "@types/google-map-react": "^1.1.3",
     "@types/node": "^13.1.1",
     "@types/react-datepicker": "^2.10.0",
+    "@types/react-map-gl": "^5.1.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.1",
     "avataaars": "^1.2.1",
@@ -16,6 +17,7 @@
     "react": "^16.8.6",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
+    "react-map-gl": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
     "react-spring": "^9.0.0-beta.34",
