--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-animated-slider": "^2.0.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.2",
