--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "PORT=9000 react-scripts start",
