--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "pg": "^8.1.0",
+    "pg-native": "^3.0.0"
   }
 }
