--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
