--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,11 +6,16 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "db:reset": "node bin/resetdb.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "knex": "^0.21.1",
+    "nodemon": "^1.18.7",
+    "pg": "^8.2.1",
+    "pg-native": "^3.0.0"
   }
 }
