--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^1.1.0",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "victory": "^35.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
