--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -13,9 +13,12 @@
     "body-parser": "^1.18.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "formidable": "^1.2.2",
     "knex": "^0.21.1",
+    "multer": "^1.4.2",
     "nodemon": "^1.18.7",
     "pg": "^8.2.1",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "react-dropzone-uploader": "^2.11.0"
   }
 }
