--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.1.0",
     "react-dom": "^16.8.6",
+    "react-dropzone-uploader": "^2.11.0",
     "react-scripts": "2.1.8",
     "semantic-ui-react": "^0.88.2",
     "victory": "^35.0.2"
