--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^8.5.1",
-    "dotenv": "^8.2.0"
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "supertest": "^6.1.3",
+    "morgan": "1.10.0",
     "nodemon": "^2.0.7",
-    "morgan": "1.10.0"
+    "supertest": "^6.1.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
