Implement query function promise-based

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PGHOST=localhost
-PGUSER=development
-PGDATABASE=beanli_development
-PGPASSWORD=development
-PGPORT=5432
+PGHOST=
+PGUSER=
+PGDATABASE=
+PGPASSWORD=
+PGPORT=
