--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "NODE_ENV=development nodemon server.js",
     "test:server": "NODE_ENV=test npm start"
   },
   "dependencies": {
