--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -9,7 +9,8 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-timeline-semantic-ui": "^1.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
