--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,9 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.8.5",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-dom": "^16.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.32.7"
@@ -24,7 +25,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "devDependencies": {},
   "browserslist": [
     ">0.2%",
     "not dead",
