--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-session": "^1.4.0",
     "express": "^4.16.4",
+    "morgan": "^1.10.0",
     "nodemon": "^1.18.7"
   }
 }
