--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "jest": "^26.6.3",
     "morgan": "1.10.0",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "twilio": "^3.56.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
