--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.1",
     "canvasjs": "^1.8.3",
+    "cookie-session": "^1.4.0",
     "material-ui-search-bar": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
