install node sass and convert css files to scss format. created nested selectors in scss files

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -10,6 +10,7 @@
     "canvasjs": "^1.8.3",
     "cookie-session": "^1.4.0",
     "material-ui-search-bar": "^1.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
