--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -9,8 +9,10 @@
     "go": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "node": "^15.10.0",
+    "nodemon": "^1.19.4"
   }
 }
