--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
