--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.1",
+    "bootstrap": "^5.0.0-beta2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "^2.1.8"
