Install react-router, styled-components, react-bootstrap. Set up react router for different pages, and set up skeleton file structure with bare bones components to test that router is working.

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -10,7 +10,9 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
-    "react-scripts": "^2.1.8"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^2.1.8",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
