--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "node": "^15.10.0",
+  
+   
     "nodemon": "^1.19.4"
   }
 }
