--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,14 +6,14 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "db:reset": "node bin/resetdb.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-  
-   
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "pg-native": "^3.0.0"
   }
 }
