--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie": "^0.4.1",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.4",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "session": "^0.1.0"
   }
 }
