--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -2,7 +2,6 @@
   "name": "react-front-end",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
   "dependencies": {
     "@auth0/auth0-react": "^1.3.0",
     "@material-ui/core": "^4.11.3",
@@ -30,6 +29,7 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:8080"
 
 }
