--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "morgan": "^1.10.0",
     "nodemon": "^1.18.7"
   }
 }
