--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,11 +6,15 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "db:reset": "node bin/resetdb.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
-  }
+    "nodemon": "^1.18.7",
+    "pg": "^8.5.1",
+    "pg-native": "^3.0.0"
+  },
+  "devDependencies": {}
 }
