--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "needle": "^2.6.0",
     "nodemon": "^1.18.7",
