--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -8,6 +8,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-leaflet": "^3.1.0",
+    "react-leaflet-choropleth": "^2.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "swr": "^0.5.5"
   },
