--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -17,6 +17,7 @@
     "needle": "^2.6.0",
     "nodemon": "^1.18.7",
     "pg": "^8.5.1",
+    "pg-native": "^3.0.0",
     "sentiment": "^5.0.2",
     "twit": "^2.2.11"
   }
