--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/pickers": "^3.3.10",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "react": "^16.9.0",
     "react-dom": "^16.8.6",
     "react-icons": "^4.2.0",
