--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "lodash": "^4.17.21",
+    "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
     "needle": "^2.6.0",
     "nodemon": "^1.18.7",
