--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "bootstrap": "^4.6.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.8.6",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
