--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -7,14 +7,18 @@
   "license": "MIT",
   "scripts": {
     "go": "nodemon server.js",
-    "db:reset": "node bin/resetdb.js"
+    "db:reset": "node bin/resetdb.js",
+    "local": "npx nodemon -L --ignore public/"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "nodemon": "^1.18.7",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "pg": "^8.5.1",
     "pg-native": "^3.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  }
 }
