--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.3",
     "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "date-fns": "^2.20.3",
     "formik": "^2.2.6",
+    "node-sass": "^4.14.1",
     "react": "^16.9.0",
-    "react-dom": "^16.8.6",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
