--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
@@ -20,6 +21,7 @@
     "pg": "^8.5.1",
     "pg-native": "^3.0.0",
     "sentiment": "^5.0.2",
+    "socket.io": "^4.0.1",
     "twit": "^2.2.11"
   }
 }
