--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -15,10 +15,12 @@
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-hover-image": "^2.0.1",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -35,6 +37,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:8080"
+  ]
 }
