--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -15,9 +15,11 @@
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-hover-image": "^2.0.1",
     "react-scripts": "4.0.3",
+    "react-wordcloud": "^1.2.7",
     "sass": "^1.32.8",
     "web-vitals": "^1.1.1"
   },
