--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -17,7 +17,7 @@
     "swr": "^0.5.5"
   },
   "scripts": {
-    "start": "./node_modules/react-scripts/bin/react-scripts.js start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
