set up server route for twilio messages

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,8 @@ DB_NAME=example
 # Uncomment and set to true for Heroku
 # DB_SSL=true if heroku
 DB_PORT=3000
+
+TWILIO_ACCOUNT_SID=add_a_SID
+TWILIO_AUTH_TOKEN=add_auth_token
+
 NODE_PATH=./src
