--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "twilio": "^3.60.0"
   }
 }
