--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
+    "react-uuid": "^1.0.2",
     "styled-components": "^5.2.3"
   },
   "scripts": {
