--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,12 +6,15 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "chat": "nodemon chat-server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "line-by-line": "^0.1.6",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "socket.io": "^4.0.1"
   }
 }
