--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -12,12 +12,17 @@
     "formik": "^2.2.6",
     "moment": "2.29.1",
     "node-sass": "^4.14.1",
+    "query-string": "^7.0.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-emoji": "^0.5.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
+    "react-scroll-to-bottom": "^4.1.0",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
     "styled-components": "^5.2.3"
   },
   "scripts": {
@@ -34,6 +39,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:8080"
+  ]
 }
