lost commit changes from commit bd0104b

--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^8.2.0",
+    "line-by-line": "^0.1.6",
+    "nodemon": "^1.18.7",
+    "pg": "^8.6.0"
+  },
+  "devDependencies": {
     "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "express": "^4.17.1"
   }
 }
