--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "line-by-line": "^0.1.6",
     "nodemon": "^1.18.7",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "twilio": "^3.60.0"
   }
 }
