--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/pickers": "^3.3.10",
+    "arctic-landscape": "^0.1.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.20.3",
@@ -20,6 +21,7 @@
     "react-emoji": "^0.5.0",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.1.0",
+    "react-pose": "^4.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "react-scroll-to-bottom": "^4.1.0",
