--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
