--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^4.2.3",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
