--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,5 +12,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nodemon": "^1.18.7"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "typescript": "^4.2.4"
   }
 }
