--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@fontsource/roboto": "^4.2.3",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.27",
     "axios": "^0.18.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8"
   },
