--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "author": "garrettgsb",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "go": "nodemon server.js",
+    "go": "nodemon dist/server.js",
     "db:reset": "node bin/resetdb.js"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "pg-native": "^3.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "jest": "^26.6.3",
     "typescript": "^4.2.4"
   }
