--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "go": "nodemon dist/server.js",
-    "db:reset": "node bin/resetdb.js"
+    "db:reset": "node dist/bin/resetdb.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/pg": "^7.14.11",
     "jest": "^26.6.3",
     "typescript": "^4.2.4"
   }
