--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -26,8 +26,12 @@
   ],
   "proxy": "http://localhost:8080",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
+    "@types/react": "16.4.2",
+    "@types/react-dom": "^17.0.3",
     "cypress": "^7.2.0",
     "jest": "^26.6.3",
-    "typescript": "^4.2.4"
+    "ts-jest": "^26.5.6"
   }
 }
