--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -21,8 +21,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/pg": "^7.14.11",
     "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   }
 }
