--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,7 +32,6 @@
     "@types/react": "16.4.2",
     "@types/react-dom": "^17.0.3",
     "cypress": "^7.2.0",
-    "jest": "^26.6.3",
     "ts-jest": "^26.5.6"
   }
 }
