--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^9.0.0",
     "express": "^4.16.4",
+    "http-proxy-middleware": "^2.0.0",
     "nodemon": "^1.18.7",
     "pg": "^8.6.0"
   }
