--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -15,16 +15,16 @@
     "chalk": "^4.1.1",
     "dotenv": "^9.0.0",
     "express": "^4.16.4",
-    "faker": "^5.5.3",
-    "knex": "^0.95.4",
     "nodemon": "^1.18.7",
     "pg": "^8.6.0",
     "pg-native": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.4",
     "@types/jest": "^26.0.23",
     "@types/pg": "^7.14.11",
+    "faker": "^5.5.3",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
