--- a/react-front-end/tsconfig.json
+++ b/react-front-end/tsconfig.json
@@ -23,7 +23,8 @@
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "noImplicitAny": false
   },
   "include": [
     "src"
