--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "db": "^3.3.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "moment": "^2.29.1",
+    "nodemon": "^1.18.7",
+    "pg": "^8.6.0",
+    "pool": "^0.4.1"
   }
 }
