--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
