--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "db": "^3.3.1",
+    "dotenv": "^9.0.2",
     "express": "^4.16.4",
     "moment": "^2.29.1",
-    "nodemon": "^1.18.7",
     "pg": "^8.6.0",
     "pool": "^0.4.1"
   }
