--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "set PORT=3002 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,5 +33,5 @@
   "devDependencies": {
     "shave": "^2.5.4"
   },
-  "proxy": "http://localhost:3003"
+  "proxy": "http://localhost:8080"
 }
