--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
