minor updates to app.js

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -7,9 +7,10 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.1",
-    "font-awesome": "^4.7.0",
-    "react": "^16.8.6",
     "dotenv": "^2.0.0",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
+    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-pro-sidebar": "^0.6.0",
     "react-router-dom": "^5.2.0",
