--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.16.4",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "pool": "^0.4.1"
   }
