Implement simple user authentication with universal-cookie

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,10 +6,11 @@
     "axios": "^0.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
-    "react-router-dom": "^6.2.1"
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
