--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.2",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "knex": "^1.0.3",
     "nodemon": "^1.18.7",
     "pg": "^8.5.0",
-    "pg-native": "^3.0.0",
-    "chalk": "^2.4.2"
+    "pg-native": "^3.0.0"
   }
 }
