--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "db:exec": "docker exec -it beleaf_database_1 psql"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "node-sass": "^7.0.1",
     "react-router-dom": "^6.2.1",
     "sass": "^1.49.7",
