--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -12,7 +12,8 @@
     "react-chartjs-2": "^4.1.0",
     "react-circular-progressbar": "1.0.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "socket.io-client": "^4.5.1"
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
