install react-cookie

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.6",
     "react-chartjs-2": "^4.1.0",
     "react-circular-progressbar": "^1.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
