adding Navbar, Footer, Sign in and sign up pages

--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,11 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.10",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
+    "@mui/styled-engine-sc": "^5.10.3",
     "axios": "^0.18.1",
+    "bootstrap": "^5.2.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^1.9.6"
   },
   "scripts": {
     "start": "react-scripts start",
