--- a/react-front-end/.env
+++ b/react-front-end/.env
@@ -1,2 +1,4 @@
 CHOKIDAR_USEPOLLING=true
 REACT_APP_MAP_API_KEY=AIzaSyBTZp2rz1G6wGouAKDwAZ_EjIFT6N1hcJE
+API_KEY_MAILGUN=3bb2988bc8e73c4270fd7a483447006b-4534758e-d8cb892b
+DOMAIN_MAILGUN=sandbox4ddc13241ecb4aa29589c4e357851fa7.mailgun.org
