--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.2.1",
     "dotenv": "^16.0.2",
     "google-map-react": "^2.2.0",
+    "mailgun-js": "^0.22.0",
     "node-sass": "^7.0.3",
     "react": "^16.8.6",
     "react-bootstrap": "^2.5.0",
