fix the back-end and front-end data sync issue

--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,7 +6,7 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
