Install react-window and react-window-infinite-loader

--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -18,6 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
+    "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "vite-express": "*"
   },
   "devDependencies": {
