Add tailwind runner to package.json script

--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "css": "npx tailwindcss -i ./src/client/index.css -o ./dist/output.css --watch",
     "dev": "nodemon src/server/main.js -w src/server",
     "start": "NODE_ENV=production node src/server/main.js",
     "build": "vite build"
